--- a/templates/html/about.html
+++ b/templates/html/about.html
@@ -64,11 +64,10 @@
                     <main class="px-3">
                         <h1>О проекте</h1>
                         <p class="lead">
-                            Мы - команда трех 10-классников из школы "Летово". На нашем ресурсе вы сможете найти
-                            информацию о различных выступлениях артистов по всей России. Например, сможете узнать где и
-                            когда проводится концерт, сколько стоят билеты, какие есть возрастные ограничения и многое
-                            другое. Данные собраны с большого количество ресурсов и захватывает артистов даже с
-                            небольшой фан базой, чем мы  принципиально отличаемся от ресурсов по типу Яндекс Афишы.
+                            Мы - команда трех 10-классников из школы "Летово". На нашем ресурсе вы сможете найти информацию о 
+                            различных выступлениях артистов по всей России. Например, сможете узнать где и когда проводится концерт, 
+                            сколько стоят билеты, какие есть возрастные ограничения и многое другое. Данные собраны с Яндекс Афиши, 
+                            цель была представить их в более удобном я понятном формате, а также вынести в отдельный интернет ресурс.
                         </p>
                         <p class="lead">
                             <a type="button" class="btn btn-lg btn-outline-secondary"
